coming soon page

--- a/client/style/globals/header.import.less
+++ b/client/style/globals/header.import.less
@@ -132,6 +132,10 @@ header {
       }
     }
 
+    .logo-image {
+      display:none;
+    }
+
     nav.bg-dark {
     	background:transparent;
 
@@ -191,4 +195,22 @@ header {
     }
 
   }
+}
+
+.leftnav-upper {
+  height: 140px;
+  width: 100%;
+  background:@bw-blue;
+  margin-bottom:10px;
+
+}
+
+.leftnav {
+  a {
+    font-family:@font-label !important;
+    text-transform:uppercase;
+    padding:10px 5px !important;
+
+  }
+
 }
