--- a/client/style/globals/footer.import.less
+++ b/client/style/globals/footer.import.less
@@ -1,16 +1,23 @@
 footer
 {
-  background-color: #333;
+  background-color: #222;
   color: white;
+  box-shadow:0px 0px 6px #111;
+
+  &.bg-dark {
+    background-color: #222;
+
+  }
 
   .logo {
     margin:0 auto;
     text-align: center;
+    max-width:330px;
   }
 
 
   .footer-nav {
-    padding:30px 0 15px;
+    padding:30px 0 50px;
     a {
       font-family:@font-label !important;
       height:auto !important;
