--- a/client/style/globals/global.import.less
+++ b/client/style/globals/global.import.less
@@ -152,6 +152,14 @@ section.parallax > .background-image-holder.blur {
 
 }
 
+.background-screen.lighter {
+  background: -moz-linear-gradient(top,  rgba(20,20,20,0.3) 0%, rgba(20,20,20,0.1) 20%, rgba(20,20,20,0.1) 80%, rgba(20,20,20,0.3) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(20,20,20,0.3) 0%,rgba(20,20,20,0.1) 20%,rgba(20,20,20,0.1) 80%,rgba(20,20,20,0.3) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(20,20,20,0.3) 0%,rgba(20,20,20,0.1) 20%,rgba(20,20,20,0.1) 80%,rgba(20,20,20,0.3) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+
+}
+
 .background-screen.darker {
 
   background: -moz-linear-gradient(top,  rgba(20,20,20,0.7) 0%, rgba(20,20,20,0.4) 20%, rgba(20,20,20,0.4) 80%, rgba(20,20,20,0.7) 100%); /* FF3.6-15 */
@@ -166,6 +174,15 @@ section.parallax > .background-image-holder.blur {
   background: -moz-linear-gradient(top,  rgba(0, 96, 100, 0.6) 0%, rgba(0, 96, 100, 0.4) 20%, rgba(0, 96, 100, 0.4) 80%, rgba(0, 96, 100, 0.6) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top,  rgba(0, 96, 100, 0.6) 0%,rgba(0, 96, 100, 0.4) 20%, rgba(0, 96, 100, 0.4) 80%, rgba(0, 96, 100, 0.6) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0, 96, 100, 0.6) 0%, rgba(0, 96, 100, 0.4) 20%, rgba(0, 96, 100, 0.4) 80%, rgba(0, 96, 100, 0.6) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005f63', endColorstr='#005f63',GradientType=0 ); /* IE6-9 */
+
+}
+
+.background-screen.bw {
+
+  background: -moz-linear-gradient(top,  @bw-blue-30 0%, @bw-blue-10 20%, @bw-blue-10 80%, @bw-blue-40 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  @bw-blue-30 0%, @bw-blue-10 20%, @bw-blue-10 80%, @bw-blue-40 100%); /* FF3.6-15 */
+  background: linear-gradient(top,  @bw-blue-30 0%, @bw-blue-10 20%, @bw-blue-10 80%, @bw-blue-40 100%); /* FF3.6-15 */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005f63', endColorstr='#005f63',GradientType=0 ); /* IE6-9 */
 
 }
