--- a/client/style/main.less
+++ b/client/style/main.less
@@ -16,6 +16,7 @@
 @import "/client/style/globals/footer.import.less";
 @import "/client/style/globals/spinners.import.less";
 @import "/client/style/globals/modals.import.less";
+@import "/client/style/globals/responsive.import.less";
 
 /* Utils */
 @import "/client/style/utils/fonts.import.less";
@@ -23,3 +24,4 @@
 /* Views */
 @import "/client/views/user/account.import.less";
 @import "/client/views/home/home.import.less";
+@import "/client/views/home/comingsoonhome.import.less";
