--- a/client/style/lib/foundry.import.less
+++ b/client/style/lib/foundry.import.less
@@ -199,8 +199,8 @@ hr.short-thick{ max-width: 50px; border-top: 5px solid #ccc; opacity: 1 !importa
 	.text-center-xs{ text-align: center !important; }
 }
 
-@heading-font: "Raleway";
-.bold{ font-weight: 600 !important; }
+@heading-font: "Hind";
+.bold{ font-weight: 700 !important; }
 .thin{ font-weight: 100 !important; }
 
 @media all and (max-width: 767px){
@@ -208,7 +208,7 @@ hr.short-thick{ max-width: 50px; border-top: 5px solid #ccc; opacity: 1 !importa
 }
 
 h1,h2,h3,h4,h5,h6,p,ul,ol,pre,table,blockquote,input,select,textarea{ margin-bottom: 24px; margin-top: 0; padding: 0; }
-h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{ font-family: @heading-font,"Helvetica Neue",Helvetica,Arial,sans-serif;  }
+h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{ font-family: @heading-font,"Hind",Helvetica,Arial,sans-serif;  }
 h1,h2,h3,h4,h5,h6{ font-weight: 300; color: @bg-dark; }
 
 h1, .h1{ font-size: 56px; line-height: 64px; }
@@ -264,7 +264,7 @@ a:hover{ color: darken(@color-primary,10%); text-decoration: none; }
 blockquote{ overflow: hidden; font-family: "Merriweather","Georgia",Times New Roman,Times,serif; font-size: 20px; line-height: 40px; font-style: italic; background: #f5f5f5; padding: 32px; color: #777; font-weight: 300; }
 .bg-secondary blockquote{ background: #fff; border-color: @color-primary; }
 blockquote .author{ font-size: 12px; display: block; float: right; margin-top: 16px; }
-.number{ font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif; }
+.number{ font-family: "Hind","Helvetica Neue",Helvetica,Arial,sans-serif; }
 .columns-2{ column-count: 2; -webkit-column-count: 2; }
 
 @media all and (max-width: 767px){
