--- a/client/style/variables.import.less
+++ b/client/style/variables.import.less
@@ -1,62 +1,18 @@
 /*
  * Available fonts
  *
- font-family:'Freight Display W01 Light';
- font-family:'Freight Display W01 Light It';
- font-family:'Freight Display W01 Book';
- font-family:'Freight Display W01 Boo1197149';
- font-family:'Freight Display W01 Medium';
- font-family:'Freight Display W01 Medium It';
- font-family:'Freight Display W01 SemiBold';
- font-family:'Freight Display W01 Sem1197161';
- font-family:'Freight Display W01 Bold';
- font-family:'Freight Display W01 Bol1197167';
- font-family:'Freight Display W01 Black';
- font-family:'Freight Display W01 Black It';
- font-family:'Brown Gothic W01 Light';
- font-family:'Brown Gothic W01 Light Italic';
- font-family:'Brown Gothic W01 Regular';
- font-family:'Brown Gothic W01 Italic';
- font-family:'Brown Gothic W01 Medium';
- font-family:'Brown Gothic W01 Medium Italic';
- font-family:'Brown Gothic W01 Bold';
- font-family:'Brown Gothic W01 Bold Italic';
- font-family:'Brown Gothic W01 Extra Bold';
- font-family:'Brown Gothic W01 Heavy';
- font-family:'Brown Gothic W01 Extra Bold Cd';
- font-family:'Brown Gothic W01 Black Cd';
- font-family:'Futura LT W01 Light';
- font-family:'Futura LT W01 Light Oblique';
- font-family:'Futura LT W01 Book';
- font-family:'Futura LT W01 Book Oblique';
- font-family:'Futura LT W01 Medium';
- font-family:'Futura LT W01 Medium Oblique';
- font-family:'Futura LT W01 Bold';
- font-family:'Futura LT W01 Bold Oblique';
- font-family:'Futura LT W01 Extra Bold';
- font-family:'Futura LT W01 Extra Bold Obl';
- font-family:'Futura LT W01 Heavy';
- font-family:'Futura LT W01 Heavy Oblique';
- font-family:'Futura LT W01 Light Condensed';
- font-family:'Futura LT W01 Light Cond Obl';
- font-family:'Futura LT W01 Medium Condensed';
- font-family:'Futura LT W01 Medium Cond Obl';
- font-family:'Futura LT W01 Bold Condensed';
- font-family:'Futura LT W01 Bold Cond Obl';
- font-family:'Futura LT W01 X Bold Condensed';
- font-family:'Futura LT W01 X Bold Cond Obl';
- font-family:'Futura W01 Display';
- font-family:'Futura W01 Black';
+ font-family: Hind
+ font-family: Crimson Text
  *
  */
 
 
-@font-light:'Futura LT W01 Light';
-@font-label:'Futura LT W01 Book';
-@font-title:'Futura LT W01 Medium Condensed';
-@font-reading:'Freight Display W01 Book', @font-light, Georgia, Times New Roman, serif;
+@font-light:'Hind';
+@font-label:'Hind';
+@font-title: 'Hind';
+@font-reading:'Crimson Text', @font-light, sans-serif;
 @font-logo: @font-reading;
-@font-family-default-starter: 'Lato', sans-serif;
+@font-family-default-starter: 'Hind', sans-serif;
 @font-family-default-regular:@font-light;
 @font-family-default-regular-alt:@font-label;
 @font-family-default:@font-light;
