--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -20,6 +20,9 @@
     width:80%;
     max-width:700px;
     margin:0 auto;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
   }
 
 
@@ -222,7 +225,7 @@ section#features {
     margin-bottom:0;
     color:@light;
 
-    background:url("/images/entity_achilles-small.jpg");
+    background: url("/images/entity_achilles-small.jpg");
     background-position:center center;
     background-repeat:no-repeat;
     background-size:100% auto;
