--- a/client/style/globals/global.import.less
+++ b/client/style/globals/global.import.less
@@ -8,17 +8,17 @@ body {
 
 h1,h2,h3,h4,h5 {
   font-family:@font-title;
-
+  font-weight: bold;
 }
 
 p {
   font-family:@font-reading;
-  font-size: 22px;
-  line-height: 37px;
-  width: 95%;
-  max-width:700px;
+  font-size: 19px;
+  line-height: 1.5em;
+  //width: 95%;
+  //max-width: 700px;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 5px 0;
   text-align:left;
   color:@text-dark;
 
