--- a/client/style/utils/fonts.import.less
+++ b/client/style/utils/fonts.import.less
@@ -1,1 +1,2 @@
-@import url("//fonts.googleapis.com/css?family=Raleway:100,600|Open+Sans:400,900|Merriweather:300|Roboto+Condensed:300,700");
+//@import url("//fonts.googleapis.com/css?family=Raleway:100,600|Open+Sans:400,900|Merriweather:300|Roboto+Condensed:300,700");
+@import url("//fonts.googleapis.com/css?family=Crimson+Text:400,400i,700|Hind:400,700");
