--- a/client/views/home/comingsoonhome.import.less
+++ b/client/views/home/comingsoonhome.import.less
@@ -8,16 +8,33 @@
 
 
 section#intro {
+  padding-top: 120px;
+  padding-bottom: 50px;
+  .bw-exhibit{
+    h3{
+      margin-bottom: 0;
+    }
+    h4{
+      margin-bottom: 0;
+    }
+    h5{
+
+    }
+  }
   hr.section-header-line {
     background:rgba(255,255,255,0.7) !important;
     height:5px;
+  }
+  .bw-intro-image{
+    width: 100%;
+    border-radius: 1000px;
   }
 
 }
 
 header {
   .logo-image {
-    width:166px;
+    height: 60px;
   }
 }
 
