--- a/client/views/home/Home_Events.less
+++ b/client/views/home/Home_Events.less
@@ -1,27 +1,29 @@
 section#events {
   ul.events-list {
     li.event-item {
-      padding: 20px 20px 20px 0;
+      padding: 10px 10px 10px 0;
       border: 1px solid #ccc;
       border-radius: 3px;
       display: flex;
       align-items: center;
       margin-bottom: 20px;
       .event-calendar-date {
-        border-left: 12px solid #ca7474;
+        border-left: 10px solid #ca7474;
         text-align: center;
         padding-left: 20px;
         margin-right: 20px;
         flex-grow: 0;
         h6.event-month {
-          margin-bottom: 7px;
+          margin-bottom: -3px;
+          font-size: 0.8em;
         }
         h3.event-day {
-          margin: 0;
-          font-size: 5em;
+          margin-bottom: -9px;
+          font-size: 3.5em;
         }
         h6.event-weekday {
           margin: 0;
+          font-size: .9em;
         }
       }
       .event-info {
