--- a/client/style/lib/foundry.import.less
+++ b/client/style/lib/foundry.import.less
@@ -1184,7 +1184,7 @@ img{ max-width: 100%; }
 	.cover.fullscreen{ height: auto; padding: 80px 0; }
 	.cover.fullscreen.image-slider{ padding: 0; }
 	.cover.fullscreen .container{ top: 0; transform: none; -webkit-transform: none; }
-	.cover.fullscreen .slides li{ height: auto; padding: 80px 0; }
+	//.cover.fullscreen .slides li{ height: auto; padding: 80px 0; }
 }
 
 /*!---------- 26. SHOP ----------*/
