update less imports; fix some console errors

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -24,4 +24,5 @@
 /* Views */
 @import "/client/views/user/account.import.less";
 @import "/client/views/home/home.import.less";
+@import "/client/views/home/home-twitter.import.less";
 @import "/client/views/home/comingsoonhome.import.less";
