add more content to homepage, update some visuals

--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -7,3 +7,16 @@
   }
 
 }
+
+
+@media screen and (max-width: 768px) {
+  .cover.fullscreen, .cover.fullscreen .slides li {
+    min-height: 400px;
+  }
+  .bw-exhibit {
+    display: none;
+    &.flex-active {
+      display: block;
+    }
+  }
+}
