--- a/client/style/globals/header.import.less
+++ b/client/style/globals/header.import.less
@@ -7,6 +7,10 @@ header {
   z-index: 99;
   background: @light;
 
+  .logo-image {
+    width: 166px;
+  }
+
   .container.close-navbar {
     width: 100%;
   }
