add neh logo to the footer and a few other bugfixes

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -56,6 +56,9 @@ section.bg-blue {
 
 }
 section#intro {
+  .background-image-holder {
+    border:none;
+  }
   .slides {
     li {
       position:relative;
@@ -408,7 +411,7 @@ section#symposium {
 }
 
 section#lenders {
-  background:@md-primary-700;
+  background:@md-primary-900;
   color:@light;
   text-align:center;
 
