--- a/client/style/globals/footer.import.less
+++ b/client/style/globals/footer.import.less
@@ -12,7 +12,13 @@ footer
   .logo {
     margin:0 auto;
     text-align: center;
-    max-width:330px;
+    max-width:390px;
+  }
+
+  .neh-logo {
+    width:90%;
+    max-width:180px;
+    margin:10px auto 45px;
   }
 
 
@@ -54,6 +60,11 @@ footer
     }
 
   }
+
+}
+
+.neh-sponsored-by-label {
+  display:block;
 
 }
 
