add a scroll down for more indicator and visual fixes for the additional cover slide

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -216,6 +216,38 @@ section#intro {
 
   }
 
+  .scroll-down-helper {
+    position:absolute;
+    bottom:30px;
+    right:40px;
+    z-index:10;
+    width:400px;
+    text-align:right;
+
+    p {
+      display:inline-block;
+      vertical-align:top;
+      color:@light;
+      opacity:0.55;
+      font-size:16px;
+      line-height:1.3em;
+      text-align:right;
+
+    }
+
+    .mdi {
+      display:inline-block;
+      vertical-align:top;
+      opacity:0.6;
+      color:@light;
+      padding:15px 5px;
+      font-size:22px;
+      display:none;
+
+    }
+
+  }
+
 }
 
 
