--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -91,6 +91,10 @@
 
 @media screen and (max-width: 410px) {
 
+  .scroll-down-helper {
+    display:none;
+  }
+
   section#events ul.events-list li.event-item .event-info h3.event-title {
     font-size:18px;
   }
