add search tools and masonry npm package; some content updates for homepage

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -271,9 +271,34 @@ section#overview{
 
   }
 
+  .curatorial-team-row {
+
+    h3 {
+      font-size:28px;
+    }
+
+    p {
+      text-align:center;
+      padding:5px 0;
+    }
+
+  }
+
 
 }
 
+section#narrative {
+
+    hr {
+      background:@md-primary-50;
+      max-width:120px;
+      margin:15px auto;
+      height:4px;
+      border:none !important;
+
+    }
+
+}
 
 section#twitter {
   background: @md-primary-900;
