added page admin, including header image upload, automatic slug,  and rich text editor based on summernote

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -26,3 +26,7 @@
 @import "/client/views/home/comingsoonhome.import.less";
 
 @import "/client/style/globals/responsive.import.less";
+
+html .mirador-osd{
+  background: #333333;
+}
