configure search tools for objects metadata; update styles for header in catalog-layout

--- a/client/style/globals/header.import.less
+++ b/client/style/globals/header.import.less
@@ -38,7 +38,7 @@ header {
   ul.menu {
     margin: 0;
     padding: 0;
-    > li {
+		> li {
       margin: 0;
       padding: 0;
 
@@ -206,6 +206,24 @@ header {
     }
 
   }
+}
+
+.catalog-layout {
+
+  header.headroom--top {
+		.logo {
+	    &.logo-dark {
+	      display: inline-block !important;
+	    }
+	    &.logo-light {
+	      display: none !important;
+	    }
+
+
+		}
+	}
+
+
 }
 
 .leftnav-upper {
