--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -211,7 +211,7 @@
   }
 }
 
-.text-search.line-search {
+.text-search.date-search {
 	padding:10px 15px;
 
   label {
@@ -321,7 +321,7 @@
 
 //search page
 
-.search .nav-wrap, .line-wrap {
+.search .nav-wrap, .date-wrap {
 	display: none;
 }
 
