reorder a few fields in objects; fixes for search tools; import search tools styles

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -24,6 +24,8 @@
 @import "/client/views/user/account.import.less";
 @import "/client/views/home/home.import.less";
 @import "/client/views/home/comingsoonhome.import.less";
+@import "/client/views/objects/objects.import.less";
+@import "/client/views/objects/objects-search-tools.import.less";
 
 @import "/client/style/globals/responsive.import.less";
 
