--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -1,7 +1,20 @@
+.md-menu-toolbar {
+	width:100%;
+	padding:70px 0 0;
+
+	.toolbar-tools {
+		width:100%;
+		max-width:1200px;
+		margin:0 auto;
+	}
+
+}
+
 .search-tools {
 
+	width:100%;
   margin:0px auto;
-  text-align:center;
+  text-align:left;
   display:inline-block;
   vertical-align: top;
 
@@ -12,7 +25,7 @@
 
 		&.open {
 			button.search-tool {
-				background:@primary !important;
+				background:@md-primary !important;
 				span,i {
 					color:@light !important;
 
@@ -97,7 +110,7 @@
 				}
 
 	      &.search-term-button--active {
-	        background-color:@primary !important;
+	        background-color:@md-primary !important;
 
 
 	        .mdi, span {
@@ -150,7 +163,7 @@
   }
 
   &:hover {
-    background:@terracotta;
+    background:@md-primary;
   }
   span, i, input {
     display:inline-block;
@@ -159,12 +172,12 @@
 
   span {
     font-family:@font-label(14px);
-    color:@primary-dark;
+    color:@md-primary-dark;
 
   }
 
   i {
-    color:@primary-dark;
+    color:@md-primary-dark;
     font-size:18px;
     margin:9px 0 6px 20px;
 
@@ -172,7 +185,7 @@
   }
 
   &.selected {
-	background:@primary;
+	background:@md-primary;
     .unchecked {
       display:none;
     }
@@ -189,7 +202,7 @@
 
 .text-search {
   padding:0;
-  color:@primary-text;
+  color:@dark;
   background:transparent;
   border:0;
 
@@ -200,7 +213,7 @@
   input {
     background:transparent;
     width: 260px;
-    border-bottom:2px solid @primary-dark;
+    border-bottom:2px solid @md-primary-dark;
     height:auto;
     padding:10px;
 
@@ -216,7 +229,7 @@
 
   label {
     font-family:@font-label(14px);
-    color:@primary-dark;
+    color:@md-primary-dark;
     display:inline-block;
     padding:14px 5px 5px 0;
 
@@ -225,7 +238,8 @@
   input {
     width:69px;
     margin:3px 10px 0 0;
-    font-family:@font-body(14px);
+    font-family:@font-light;
+		font-size:14px;
 
   }
 
@@ -272,10 +286,10 @@
   }
 
   .filter-key {
-    background:@primary;
+    background:@md-primary;
     color:@light;
     padding:10px 20px;
-    border:1px solid @primary;
+    border:1px solid @md-primary;
     font-family:@font-label(14px);
     text-transform:uppercase;
 
@@ -285,7 +299,7 @@
     padding:2px 15px;
     border:1px solid #eee;
     margin:0 0 0 -1px;
-    color:@primary-dark;
+    color:@md-primary-dark;
     background:rgba(255,255,255,0.95);
 
 
@@ -300,7 +314,8 @@
     }
 
     span {
-      font-family:@font-body(13px);
+      font-family:@font-light;
+			font-size:13px;
       display:inline-block;
       vertical-align: top;
 
@@ -347,6 +362,13 @@
 		}
 }
 
+
+.search-tool--date {
+	width:10%;
+	max-width:300px;
+	min-width:200px;
+
+}
 
 
 
