add registration form and simple validation create method

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -536,3 +536,33 @@ section#lenders {
 
 
 }
+
+.dialog-modal {
+	overflow-y:scroll !important;
+	padding-bottom:100px;
+
+	div div div div {
+		max-height:none !important;
+	}
+
+	.text-field {
+		vertical-align: top;
+		margin:5px 1%;
+		width:46% !important;
+
+		&.name-field {
+			width:30% !important;
+
+		}
+
+	}
+
+	.checkbox-field {
+		label{
+			font-family:@font-label !important;
+			color:#444 !important;
+		}
+
+	}
+
+}
