--- a/client/style/globals/spinners.import.less
+++ b/client/style/globals/spinners.import.less
@@ -80,3 +80,46 @@
     opacity: 0;
   }
 }
+
+.dot-spinner {
+  margin: 80px auto 120px;
+  width: 130px;
+  text-align: center;
+}
+
+.dot-spinner > div {
+  width: 22px;
+  height: 22px;
+	margin:10px;
+  background-color: @md-primary-900;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.dot-spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.dot-spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
