--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -1,6 +1,7 @@
 .md-menu-toolbar {
 	width:100%;
-	padding:70px 0 0;
+	padding:56px 0 0;
+	background:#eee;
 
 	.toolbar-tools {
 		width:100%;
@@ -57,13 +58,13 @@
     .dropdown-menu {
       width:100%;
       border-radius:0;
-      background:rgba(255,255,255,0.98);
+      background:#eee;
       margin:0;
       max-height:460px;
       overflow-y:scroll;
       text-align:center;
 			position:fixed;
-			top:80px;
+			top:124px;
 			left:0;
 			padding:10px 0 30px;
 		  opacity:.3;
@@ -100,6 +101,7 @@
         text-align:left !important;
         width:100%;
         text-overflow:ellipsis;
+			  font-family: @font-label ;
 
 				&:hover {
 				  background:#f0f0f0;
@@ -120,6 +122,12 @@
 
 	      }
 
+        span {
+					color:@dark !important;
+				  font-family: @font-label !important;
+
+        }
+
 				.mdi {
 				  display: inline-block !important;
 				  vertical-align: top;
@@ -128,6 +136,7 @@
 					margin:0;
 					padding:10px;
 					margin-top:-20px !important;
+					font:normal normal normal 24px/1 "Material Design Icons" !important;
 
 					&:before {
 					  font-size: 18px !important;
@@ -136,9 +145,6 @@
 
 				}
 
-        span {
-          font-family:@font-label( 14px );
-        }
 
 
       }
@@ -154,17 +160,62 @@
   height:69px;
   background:@light;
   padding:10px 20px 5px 25px;
-  border-right:1px solid #ddd;
-  margin-right:-5px;
+	margin:0 5px;
+
+  &:hover {
+    background:@md-primary;
+  }
 
   &.search-type-keyword {
     border-left:1px solid #ddd;
 
   }
 
-  &:hover {
-    background:@md-primary;
-  }
+	&.dropdown-toggle {
+		height:73px !important;
+		border-radius:none !important;
+	  font-family: @font-label ;
+
+    span {
+			color:@dark !important;
+		  font-family: @font-label !important;
+		}
+
+		.mdi {
+			font:normal normal normal 24px/1 "Material Design Icons" !important;
+		}
+
+	}
+
+	input[type="text"]{
+	  font-family: @font-label !important;
+		font-weight:light !important;
+		label {
+		  font-family: @font-label !important;
+			font-weight:light !important;
+
+		}
+
+		::-webkit-input-placeholder {
+		  font-family: @font-label !important;
+			font-weight:light !important;
+		}
+		:-moz-placeholder {
+		  font-family: @font-label !important;
+			font-weight:light !important;
+		}
+		::-moz-placeholder {
+		  font-family: @font-label !important;
+			font-weight:light !important;
+		}
+		:-ms-input-placeholder {
+		  font-family: @font-label !important;
+			font-weight:light !important;
+		}
+
+	}
+
+
   span, i, input {
     display:inline-block;
     vertical-align: top;
@@ -368,9 +419,14 @@
 	max-width:300px;
 	min-width:200px;
 	border-right:none;
+	background:transparent;
 
 	.irs {
 		width:100%;
+	}
+
+	.irs-grid-pol {
+		background:#222;
 	}
 
 	label {
