Updating react-slick, slider click working now
Signed-off-by: Suhaib Khan <suheb.work@gmail.com>

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -27,6 +27,9 @@
 @import "/client/views/objects/objects.import.less";
 @import "/client/views/objects/objects-search-tools.import.less";
 
+/* Shared views */
+@import "/client/shared/viewer.import.less";
+
 @import "/client/style/globals/responsive.import.less";
 
 html .mirador-osd{
