Adding grid and spread ipad view
Signed-off-by: Suhaib Khan <suheb.work@gmail.com>

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -26,6 +26,7 @@
 @import "/client/views/home/comingsoonhome.import.less";
 @import "/client/views/objects/objects.import.less";
 @import "/client/views/objects/objects-search-tools.import.less";
+@import "/client/views/ipads/ipads.import.less";
 
 /* Shared views */
 @import "/client/shared/viewer.import.less";
